components/atoms/chatMessage/chatMessage.module.scss
@use '/styles/common';

.message {
    display: flex;
    align-items: center;
    margin-left: auto;
    color: rgb(30, 30, 30);
    position: relative;
    word-break: break-all;

    &>button {
        order: 2;
    }
}

.time {
    top: -1.1rem;
    left: unset;
    right: 1.75rem;
    position: absolute;
    font-size: 0.75rem;
    text-align: right;
    width: 7rem;
}

.timeReceiver {
    right: unset;
    left: 0.5rem;
    text-align: left;
}

.content {
    background-color: var(--color-secondary);
    border-radius: var(--radius-big);
    padding: 0.6rem 1rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    max-width: 10rem;

    @include common.mediaquery('desktop') {
        max-width: 20rem;
    }

    &>button {
        order: 2;
    }

    &>figure {
        order: 2;
    }


}

.messageReceiver {
    margin-left: 0;
    color: inherit;

    &>.content {
        background-color: var(--bg-secondary);
    }

    &>button {
        order: 0;
    }
}

.contentReceiver {
    &>button {
        order: 0;
    }

    &>figure {
        order: 0;
    }
}

.options {
    color: var(--text-black);
}

